force-app/main/default/objects/Integration_Hook__mdt/fields/Implementing_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Class__c</fullName>
    <label>Implementing Class</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>