force-app/main/default/objects/Integration_Hook__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>