force-app/main/default/objects/Integration_Hook__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>40</length>
    <type>Text</type>
</CustomField>